[gd_scene load_steps=18 format=3 uid="uid://cyu7mqfll4rh7"]

[ext_resource type="Script" uid="uid://msoma1w0x1eg" path="res://Scenes/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Resource" uid="uid://cuavrjvohel75" path="res://Resources/Unity Type/Player.tres" id="2_dd0ac"]
[ext_resource type="Resource" uid="uid://dvoibx8tek078" path="res://Resources/Unity Type/Enemy.tres" id="3_0u5uq"]
[ext_resource type="AudioStream" uid="uid://bi87uvvkd5alg" path="res://Music/FX/player_take_damage.wav" id="4_74mp2"]
[ext_resource type="PackedScene" uid="uid://bovdkik3pa1gb" path="res://Scenes/Shield/shield.tscn" id="4_gk6dx"]
[ext_resource type="PackedScene" uid="uid://dofe3q3xbhai2" path="res://Scenes/Player/Powers/Dash/dash_power.tscn" id="4_htcer"]
[ext_resource type="Texture2D" uid="uid://d2wnnx8s0dnxb" path="res://Sprites/Player.png" id="4_jhyir"]
[ext_resource type="PackedScene" uid="uid://cxgblyi7lltfb" path="res://Scenes/Player/Powers/Shoot/shoot_power.tscn" id="6_dd0ac"]
[ext_resource type="Script" uid="uid://bqguc4lmxea1i" path="res://Addon/Global Timer/global_timer.gd" id="7_0u5uq"]
[ext_resource type="PackedScene" uid="uid://c2wanf2angl44" path="res://Scenes/Bullet/Physical Bullet/player_bullet.tscn" id="8_jhyir"]
[ext_resource type="Script" uid="uid://qe1wec45pfyp" path="res://Scenes/Player/health_bar.gd" id="10_jhyir"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ucd7u"]
radius = 43.185646

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74mp2"]
bg_color = Color(0.045159757, 0.043369442, 0.043369442, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oikmp"]
bg_color = Color(0.5678866, 0.123350576, 0.23090373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gk6dx"]
bg_color = Color(0.045159757, 0.043369442, 0.043369442, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhyir"]
bg_color = Color(0.3624049, 0.5851232, 0.7443918, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06tpx"]
bg_color = Color(0.7715464, 0.42520788, 0.14221707, 1)

[node name="Player" type="Area2D"]
script = ExtResource("1_a3d8c")
max_speed = 5.0
acceleration_speed = 0.5
deceleration_speed = 0.05
unit_type = ExtResource("2_dd0ac")
target_type = ExtResource("3_0u5uq")
max_hp = 5.0
damage = 1.0
shoot_speed = 10.0
piercing_shoot = 1
time_to_find_target = 0.1
invulnerable_time = 0.3
blink_color = Color(2.834349, 2.834349, 2.834349, 1)
take_damage_fx = ExtResource("4_74mp2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_jhyir")

[node name="Shield" parent="." instance=ExtResource("4_gk6dx")]
visible = false
scale = Vector2(5, 5)
target_type = ExtResource("3_0u5uq")
shield_size = 5.0
shield_time = 10.0
spend_shield_time = 0.1
current_shield_time = 10.0
recovery_shield_time = 0.01
overcharge_factor = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ucd7u")

[node name="DashPower" parent="." instance=ExtResource("4_htcer")]
dash_speed = 15.0
dash_effect_time = 0.1
dash_refresh_time = 5.0

[node name="ShootPower" parent="." instance=ExtResource("6_dd0ac")]
bullet = ExtResource("8_jhyir")

[node name="GetClosestEnemyTimer" type="Node" parent="."]
script = ExtResource("7_0u5uq")
metadata/_custom_type_script = "uid://bqguc4lmxea1i"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -24.0
theme_override_styles/background = SubResource("StyleBoxFlat_74mp2")
theme_override_styles/fill = SubResource("StyleBoxFlat_oikmp")
max_value = 1.0
value = 1.0
show_percentage = false
script = ExtResource("10_jhyir")

[node name="ShieldBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 46.0
theme_override_styles/background = SubResource("StyleBoxFlat_gk6dx")
theme_override_styles/fill = SubResource("StyleBoxFlat_jhyir")
max_value = 1.0
value = 1.0
show_percentage = false
script = ExtResource("10_jhyir")

[node name="DashBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = 46.0
offset_right = 20.0
offset_bottom = 62.0
theme_override_styles/background = SubResource("StyleBoxFlat_gk6dx")
theme_override_styles/fill = SubResource("StyleBoxFlat_06tpx")
max_value = 1.0
value = 1.0
show_percentage = false
script = ExtResource("10_jhyir")

[node name="InvulnerableTimer" type="Node" parent="."]
script = ExtResource("7_0u5uq")
metadata/_custom_type_script = "uid://bqguc4lmxea1i"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 1
amount = 50
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_max = 1.5
color = Color(1, 1, 1, 0.5176471)
